test/invalid/MissingArrow/MissingArrow.plume
/**
 * Missing arrow
 * @author 36994, César Santos
 */
class MissingArrow extends Object is
  method test : () Boolean is
    true